# sphinx-docsearch

./: .env.example  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  update_assets.py
.github/: dependabot.yml
.github/workflows/: assets.yml  ci.yml  crawler.yml  deps.yml  release.yml
docs/: conf.py  configuration.md  credentials.md  customization.md  index.md  index.rst  requirements.txt  themes.md  what-is-docsearch.md  what.md
docs/_templates/: layout.html
docs/static/: custom.css
src/sphinx_docsearch/: __init__.py
src/sphinx_docsearch/static/: alabaster-docsearch-custom.css  docsearch.css  docsearch.js  docsearch_config.js_t  furo-docsearch-custom.css  pydata-docsearch-custom.css  rtd-docsearch-custom.css
src/sphinx_docsearch/templates/sidebar/: search.html
src/sphinxawesome/docsearch/static/: docsearch_config.js_t
src/sphinxawesome/docsearch/templates/: searchbox.html
tests/: conftest.py  test_assets.py  test_builder.py  test_config.py  test_context.py  test_dom.py  utils.py
