[tool.poetry]
name = "sphinx-docsearch"
version = "0.1.0"
description = "A Sphinx extension for replacing the built-in search with Algolia DocSearch"
authors = ["Algolia <support@algolia.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "sphinx_docsearch", from = "src"}
]
classifiers = [
  'Programming Language :: Python',
  'Framework :: Sphinx',
  'Framework :: Sphinx :: Extension',
  'Topic :: Documentation',
  'Topic :: Documentation :: Sphinx',
  'Topic :: Software Development :: Documentation'
]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = [
  {version = "<7.2", python = ">=3.8,<3.9"},
  {version = "^7.2,<7.5", python = ">=3.9,<3.10"},
  {version = "^8,<9", python = ">=3.10"},
]


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-autobuild = "*"
python-dotenv = "*"
furo = "*"
myst-parser = [
  {version="^3", python=">=3.8,<3.10"},
  {version="^4", python=">=3.10"}
]
# Not yet supported with Sphinx 8
# sphinx_rtd_theme = "*"
# sphinxawesome-theme = "*"
pydata-sphinx-theme = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8"
beautifulsoup4 = "^4.12.2"
pytest-cov = ">=4,<6"
mypy = "^1.2.0"
types-beautifulsoup4 = "^4.12.0.4"
nox = "^2024.4.15"
httpx = "^0.27.0"
defusedxml = "^0.7"

[tool.coverage.path]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["sphinx_docsearch"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
show_error_codes = true
show_error_context = true
pretty = true
strict = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "W", "I", "C90", "D", "UP", "YTT", "S", "ANN", "SIM", "N"]
# Ignore conflicting rules
ignore = ["D203", "D213", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
